# TaskManager

./: .gitignore  CMakeLists.txt
TaskManager/: CMakeLists.txt  TaskManager.cpp  TaskManager.h
